--- a/app/src/App.css
+++ b/app/src/App.css
@@ -6,6 +6,10 @@
   margin: 2rem;
 }
 
+.logo{
+  display: block;
+   margin: auto;
+}
 .section {
   text-align: left;
   max-width: 720px;
@@ -13,4 +17,22 @@
 }
 .child {
   margin: 0 auto;
+
+  padding-top: 30px;
+  padding-bottom: 30px
+}
+
+
+.headerButtons {
+  display: flex;
+  justify-content: space-between;
+  padding-right: 10px;
+  padding-left: 10px;
+  padding-top: 20px;
+  padding-bottom: 35px
+
+}
+
+body{
+  background-color: #ececec;
 }
