--- a/app/src/App.css
+++ b/app/src/App.css
@@ -135,6 +135,7 @@ p, h1, h2, h3, h4, h5{
   color : rgb(241, 255, 255);
 }
 
+
 .ant-btn-link{
   color: #ececec;
 }
@@ -150,10 +151,84 @@ p, h1, h2, h3, h4, h5{
   color:rgb(195, 197, 198); 
 }
 
-.ant-table-cell {
-  background-color: rgb(43, 51, 65, 0.75);
+.ant-table {
+  background: transparent;
 }
 
+
+.ant-table-cell {
+  color: rgb(195, 197, 198);
+}
+
+.ant-table-tbody > tr > td {
+  border-bottom: 1px solid rgb(195, 197, 198); 
+}
+
+.ant-table-small .ant-table-thead > tr > th {
+  border-bottom: 1px solid rgb(195, 197, 198); 
+  background: transparent;
+}
 .ant-table-thead > tr > th {
-  background: rgb(43, 51, 65, 0.85);
+  color: rgb(195, 197, 198);
+}
+.ant-pagination-item-active {
+  background: transparent;
+}
+
+.ant-table-tbody > tr.ant-table-row-level-0:hover > td {
+  background: rgb(195, 197, 198, 0.1);
+}
+
+.ant-table-row:hover {
+  
+}
+
+.ant-select:not(.ant-select-customize-input) .ant-select-selector {
+  background: transparent;
+}
+.ant-pagination-item a {
+  color: rgb(195, 197, 198);
+}
+.ant-select {
+  color: rgb(195, 197, 198);
+}
+
+.ant-select-item-option-active:not(.ant-select-item-option-disabled) {
+  
+}
+
+.ant-pagination-jump-prev .ant-pagination-item-container .ant-pagination-item-ellipsis, .ant-pagination-jump-next .ant-pagination-item-container .ant-pagination-item-ellipsis {
+  color: rgb(195, 197, 198); 
+}
+
+.ant-select-item-option-content {
+  color: rgb(195, 197, 198);
+}
+
+.ant-select-arrow {
+  color: rgb(195, 197, 198);
+}
+
+.ant-pagination-next button {
+  color: rgb(195, 197, 198);
+}
+.ant-pagination-prev button{
+  color: rgb(195, 197, 198);
+}
+
+.ant-select-dropdown {
+  background: transparent;
+}
+
+body {
+  padding: 20px;;
+}
+
+.blockchainInfos {
+  text-align: center;
+}
+
+.blockchainInfos > p {
+  padding-bottom: 5px;
+  font-size: 16px;
 }
